# tuc

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  CPack.cmake  LICENSE  README.md  test.c
docker/: Dockerfile-clang  Dockerfile-gcc
src/: CMakeLists.txt  allocator.c  print.c  test.c  test.h  tuc.c
src/cmake/: Config.cmake.in  tuc.cmake
src/include/tuc/: allocator.h  print.h  test.h  tuc.h
test/: CMakeLists.txt  main.c
test/export/: CMakeLists.txt  main.c
test/tu/: CMakeLists.txt  main.c
